# Thunder_Note_Client

./: CMakeLists.txt  EditNote.qml  Main.qml  NoteListView.qml  main.cpp  notemodel.cpp  notemodel.h  qtquickcontrols2.conf
appImage/: notes.desktop
